--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^1.6.1",
     "react-countup": "^6.1.1",
     "react-dom": "17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-router": "^6.3.0",
     "react-slick": "^0.28.1",
     "react-visibility-sensor": "^5.1.1",
