add some categories such as carpet

--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
     "isotope-layout": "^3.0.6",
+    "moment": "^2.29.3",
     "next": "12.1.0",
     "nouislider-react": "^3.4.1",
+    "qs": "^6.10.3",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-countup": "^6.1.1",
     "react-dom": "17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-markdown": "^8.0.3",
+    "react-moment": "^1.1.2",
     "react-router": "^6.3.0",
     "react-slick": "^0.28.1",
     "react-visibility-sensor": "^5.1.1",
