--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/roboto": "^4.5.5",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
+    "axios": "^0.27.2",
     "isotope-layout": "^3.0.6",
     "moment": "^2.29.3",
     "next": "12.1.0",
