--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_STRAPI_API_URL = "http://localhost:1337"
+NEXT_PUBLIC_STRAPI_API_URL = "https://strapi-floor-metaverse-ww5pg.ondigitalocean.app"
