change address autofill part

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_STRAPI_API_URL = "https://strapi-floor-metaverse-ww5pg.ondigitalocean.app"
+GOOGLE_MAP_API_KEY="AIzaSyBpK2K9D5QfMMiTVdsgz9cSjoKcXmhRsOo"
