--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^1.6.1",
     "react-countup": "^6.1.1",
     "react-dom": "17.0.2",
+    "react-google-autocomplete": "^2.6.1",
     "react-google-recaptcha": "^2.1.0",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
