--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "isotope-layout": "^3.0.6",
     "moment": "^2.29.3",
     "next": "12.1.0",
+    "nookies": "^2.5.2",
     "nouislider-react": "^3.4.1",
     "qs": "^6.10.3",
     "react": "17.0.2",
