--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "qs": "^6.10.3",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-cookie": "^4.1.1",
     "react-countup": "^6.1.1",
     "react-dom": "17.0.2",
     "react-google-autocomplete": "^2.6.1",
+    "react-google-places-autocomplete": "^3.3.4",
     "react-google-recaptcha": "^2.1.0",
     "react-markdown": "^8.0.3",
     "react-moment": "^1.1.2",
